# burn_n_turn

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  INGAMEREADME.txt  README.md  old1_CMakeLists.txt
.claude/: settings.local.json
.cursor/plans/: chatgpt_dragongamecontroller_public_variable_burndown_d66fc8ed.plan.md  claude_encapsulate_dragongamecontroller_63e8648f.plan.md  configurationfile_class_design_2e905922.plan.md  cursor_dragongamecontroller_public_variable_burndown_82a5f13c.plan.md  file_io_usage_locations.md  game_logic_simulator_implementation_summary.md  gemini_apply_public_variable_burndown_to_dragongamecontroller_280b1d29.plan.md  general_file_exception_split_summary.md  (+5 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  phase_1_discussion.md  phase_1_plan.md  phase_1_process.md  smart_pointer_unmigrated.md
assets/: levels_bck.txt  levels_old.txt  levels_rate.txt  levels_trial.txt  start.txt
assets/bonus/: big.txt  (+5 more)
bin_files/: config.txt
code/: CMakeLists.txt  README.md  classes_reference.md  code_style.md  config.txt  how_to_code.md  how_to_plan.md  identify-dependencies.md  smart_pointer_burndown.md
code/.cursor/plans/: game_logic_simulator_061b0118.plan.md  game_logic_simulator_implementation_summary.md  smart_pointer_rename_and_make_smart_934c58d9.plan.md
code/.cursor/rules/: Code-style.mdc  Verify-correctness.mdc  h-file-creation-modification.mdc
code/game/: CMakeLists.txt  castle.cc  castle.h  common.h  core.cc  core.cpp  core.h  critter_generators.cc  critter_generators.cpp  critter_generators.h  critters.cc  critters.cpp  critters.h  dragon.cc  dragon.cpp  dragon.h  dragon_constants.h  dragon_game_runner.cc  dragon_game_runner.h  dragon_macros.h  entities.cc  entities.cpp  entities.h  entity_ledger.h  fireball.cc  fireball.cpp  fireball.h  game.h  game_config.cc  game_config.h  game_runner_interface_impl.cc  gameplay.cc  gameplay.cpp  gameplay.h  level.cc  level.cpp  level.h  main.cpp  screen_controllers.cpp  screen_controllers.h  (+6 more)
code/game/controller/: basic_controllers.cc  basic_controllers.h  buy_now_controller.cc  buy_now_controller.h  dragon_game_controller.cc  dragon_game_controller.h  entity_list_controller.cc  entity_list_controller.h  entity_list_controller_test.cc  entity_registrar_test.cc  game_controller_interface.h  level_controller.cc  level_controller.h  menu_controller.cc  menu_controller.h
code/game/critters/: critters.cc  critters.h  fighter.cc  fighter.h  mage.cc  mage.h  princess.cc  princess.h  slime.cc  slime.h  trader.cc  trader.h
code/game_utils/: CMakeLists.txt  Global.h  MessageWriter.cc  MessageWriter.h  Preloader.cc  Preloader.cpp  Preloader.h  draw_utils.cc  draw_utils.h  event.cc  event.cpp  event.h  game_runner_interface.h  image_sequence.cc  image_sequence.h  mouse_utils.cc  mouse_utils.h  sound_sequence.cc  sound_sequence.h  sound_utils.cc  sound_utils.h
code/gui_src/: General.cpp  GuiGenHdr.h  GuiSdl.cpp  GuiSdl.h
code/sdl_examples/: CMakeLists.txt  SDL_ex1_basic.cc  SDL_ex1_basic.cpp  SDL_ex2_interactive.cc  SDL_ex2_interactive.cpp  SDL_ex3_image.cc  SDL_ex3_image.cpp  SDL_ex4_sound.cc  SDL_ex4_sound.cpp
code/simulation/: CMakeLists.txt  run_simulation_test_parallel.ps1  simulation.cc  simulation.cpp  simulation.h  simulation_main.cpp  simulation_test.cc  simulation_test.cpp
code/utils/: CMakeLists.txt  General.cpp  General.h  SmartPointer.cpp  SmartPointer.h  configuration_file.cc  configuration_file.h  configuration_file_test.cc  debug_log.cpp  debug_log.h  exception.cc  exception.h  file_utils.cc  file_utils.cpp  file_utils.h  file_utils_test.cc  file_utils_test.cpp  index.cc  index.h  math_utils.h  random_utils.cc  random_utils.h  smart_pointer.cc  smart_pointer.h  smart_pointer_test.cc  smart_pointer_test.cpp  string_utils.cc  string_utils.h  timer.cc  timer.h
code/wrappers/: CMakeLists.txt  GuiGen.cc  GuiGen.cpp  GuiGen.h  GuiGenHdr.h  SuiGen.h  color.cc  color.h  font_writer.cc  font_writer.h  geometry.cc  geometry.h  gui_key_type.h
code/wrappers_mock/: CMakeLists.txt  GuiMock.cc  GuiMock.cpp  GuiMock.h  IMPLEMENTATION_NOTES.md  SuiMock.cc  SuiMock.h  wrappers_mock_test.cc  wrappers_mock_test.cpp
code/wrappers_sdl_impl/: CMakeLists.txt  GuiSdl.cc  GuiSdl.cpp  GuiSdl.h  SuiSdl.cc  SuiSdl.cpp  SuiSdl.h  gui_sdl_example.cc  gui_sdl_example.cpp  sdl_game_runner_main.cc  sdl_game_runner_main.cpp  sui_sdl_example.cc  test_sdl.cc  test_sdl.cpp
docs/: clang_tidy_out.txt  classes_reference.md  dead_code_summary.md  dragon_game_controller_public_access.md  file_io_usage_locations.md  game_ideas.md  game_mechanics.md  headers_reference.md  how_to_clang.md  how_to_code.md  how_to_plan.md  identify-dependencies.md  macro-inventory.md  public_variable_burndown.md  remove-dependencies.md  smart_pointer_burndown.md
dragongame/: README.txt  TODO
dragongame/pluanbo/tags/1.3/: CMakeLists.txt  GuiGen.h  GuiSdl.h  SmartPointer.cpp  SmartPointer.h  noisyfly.h  tower_defense.h
dragongame/pluanbo/tags/1.3/project/fireball/: laser.txt
dragongame/pluanbo/tags/1.3/project/knight/: die.txt
gui_stuff/of/: CMakeLists.txt  GuiOf.cpp  testApp.h
gui_stuff/sdl/: CMakeLists.txt  GuiSdl.cpp  GuiSdl.h
gui_stuff/sdl/include/: SDL_keysym.h
gui_stuff/sdl/include_ln/: SDL_config.h
gui_stuff/sdl/tui_sdl/: CMakeLists.txt  TuiSdl.h
gui_stuff/win/nui_win/: CMakeLists.txt  main.cpp
gui_stuff/win/tui_win/: CMakeLists.txt
misc_old/old_gui_stuff/old_gui_libraries/mfc/: CMakeLists.txt  GuiMfc.cpp
misc_old/old_gui_stuff/old_gui_libraries/tui/generator/: CMakeLists.txt  TemplateGenerator.cpp
old_gui_stuff/: TODO.txt
pluanbo/: role_playing_game.txt
pluanbo/tower_defense_code/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~
pluanbo/tower_defense_code/gui_src/: General.h  GuiSdl.cpp  GuiSdl.h  SmartPointer.h  SuiSdl.cpp  SuiSdl.h  event.h
scripts/: make_princess_sheet.py
sdl_test/project_2_image/: 02_getting_an_image_on_the_screen.cpp  CMakeLists.txt
sdl_test/project_3_sound/: 21_sound_effects_and_music.cpp  CMakeLists.txt
unused_old_ignore/: test.txt
(+463 files in other folders)
